// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App at / 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-4 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi>
      $100.00
    </bdi>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi>
      Jul 27, 2019
    </bdi>
     
    <bdi>
      09:00:00
    </bdi>
  </p>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi>
        Set the clock
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiFormControl-root MuiTextField-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              style="transform: scaleY(-1);"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
              />
            </svg>
          </span>
        </button>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-8"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi>
        Request permission to use deviceorientation
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`App at /chess 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-11 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-14 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <table
    class="ChessboardTable"
    dir="ltr"
  >
    <tbody>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="Square White"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`App at /clock 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-20 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <canvas
    height="400"
    width="400"
  />
</div>
`;

exports[`App at /counter 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-23 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-26 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0
    </span>
    <div
      class="MuiButtonGroup-root"
      role="group"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi>
            Reset
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi>
            +
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi>
            -
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementIfOddButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi>
            + if odd
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementAsyncButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi>
            + in 1 second
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`App at /info 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-32 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi>
        Fetch data
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Fetching not started.
  </p>
</div>
`;

exports[`App at /nonexistent-path 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-50 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-53 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  Error: No route matches /nonexistent-path.
</div>
`;

exports[`App at /paint 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-38 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <canvas
    class="Canvas"
    height="320"
    width="320"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi>
        Clear
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-36 Mui-checked MuiIconButton-colorSecondary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input-38"
            name="tool"
            type="radio"
            value="pen"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-38"
            name="tool"
            type="radio"
            value="bucket"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.56 8.94L7.62 0 6.21 1.41l2.38 2.38-5.15 5.15c-.59.59-.59 1.54 0 2.12l5.5 5.5c.29.29.68.44 1.06.44s.77-.15 1.06-.44l5.5-5.5c.59-.58.59-1.53 0-2.12zM5.21 10L10 5.21 14.79 10H5.21zM19 11.5s-2 2.17-2 3.5c0 1.1.9 2 2 2s2-.9 2-2c0-1.33-2-3.5-2-3.5z"
            />
            <path
              d="M0 20h24v4H0z"
              fill-opacity=".36"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
  </div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root"
    >
      line cap
    </label>
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-38"
              name="lineCap"
              type="radio"
              value="butt"
            />
            <div
              class="PrivateRadioButtonIcon-root-41"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-42"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          butt
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-36 Mui-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-38"
              name="lineCap"
              type="radio"
              value="round"
            />
            <div
              class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-42"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          round
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-35 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-38"
              name="lineCap"
              type="radio"
              value="square"
            />
            <div
              class="PrivateRadioButtonIcon-root-41"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-42"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          square
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`App at /reminder 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <span
        class="MuiSwitch-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-44 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-47 MuiSwitch-input"
              type="checkbox"
              value=""
            />
            <span
              class="MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiSwitch-track"
        />
      </span>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi>
            Languages
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            style="min-width: 0px;"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <ul
    class="MuiList-root MuiList-padding"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi>
        Add
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
